--- a/frontend/src/Pages/adhikaar/adhikaar.module.css
+++ b/frontend/src/Pages/adhikaar/adhikaar.module.css
@@ -1,43 +1,80 @@
-
-.container{
+.container {
 	height: 90vh;
 	width: 85%;
 	margin: 0 auto;
 	display: flex;
-	justify-content:space-between;
+	justify-content: space-between;
 	flex-wrap: wrap;
-  }
+}
 
-  .image{
+.image {
 	height: 60vh;
 	display: flex;
 	align-self: center;
-  }
+}
 
-  .loginform{
+.loginform {
 	display: flex;
 	align-items: center;
 	width: 30%;
-  }
+}
 
-  .formm{
+.formm {
 	display: flex;
 	flex-direction: column;
-	width: 100% ;
-  }
+	width: 100%;
+}
 
-  .formm input{
+.formm input {
 	padding: 0.75rem 3.5rem;
 	margin-bottom: 2rem;
-  }
+}
 
-  .formm button{
-	margin-top:1rem ;
+.formm button {
+	margin-top: 1rem;
 	background-color: #5DB9E8;
-	border:  none ;
+	border: none;
 	padding: 1rem 1rem;
 	color: white;
 	border-radius: 10px;
-  }
+}
 
 
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+.navbar {
+	display: flex;
+	justify-content: space-around;
+	background-color: transparent;
+	padding: 10px 0;
+}
+
+.navbar button {
+	background-color: transparent;
+	border: none;
+	color: black;
+	font-size: 16px;
+	cursor: pointer;
+	padding: 10px 20px;
+	transition: background-color 0.3s ease;
+}
+
+.navbar button:hover {
+	background-color: aliceblue;
+}
+
+.navbar button.active {
+	border-bottom: 4px solid #5db9e8;
+
+}
+
+
+input[type="number"] {
+	-moz-appearance: textfield;
+	appearance: textfield;
+}
