--- a/frontend/src/Pages/check/check.module.css
+++ b/frontend/src/Pages/check/check.module.css
@@ -1,42 +1,70 @@
-
-.container{
+.container {
 	height: 90vh;
 	width: 85%;
 	margin: 0 auto;
 	display: flex;
-	justify-content:space-between;
+	justify-content: space-between;
 	flex-wrap: wrap;
-  }
+}
 
-  .image{
+.image {
 	height: 60vh;
 	display: flex;
 	align-self: center;
-  }
+}
 
-  .loginform{
+.loginform {
 	display: flex;
 	align-items: center;
 	width: 30%;
-  }
+}
 
-  .formm{
+.formm {
 	display: flex;
 	flex-direction: column;
-	width: 100% ;
-  }
+	width: 100%;
+}
 
-  .formm input{
+.formm input {
 	padding: 0.75rem 3.5rem;
 	margin-bottom: 2rem;
-  }
+}
 
-  .formm button{
-	margin-top:1rem ;
+.formm button {
+	margin-top: 1rem;
 	background-color: #5DB9E8;
-	border:  none ;
+	border: none;
 	padding: 1rem 1rem;
 	color: white;
 	border-radius: 10px;
-  }
+}
 
+.tableContainer {
+	margin-top: 20px;
+}
+
+.table {
+	margin: auto;
+	width: 80%;
+	border-collapse: collapse;
+	margin-bottom: 50px;
+}
+
+.table th,
+.table td {
+	padding: 8px;
+	border: 1px solid #ddd;
+	text-align: left;
+}
+
+.table th {
+	background-color: #f2f2f2;
+}
+
+.table tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+.table tr:hover {
+	background-color: #ddd;
+}
